# ImGuiBlend2DCmake

./: .clang-format  CMakeLists.txt
include/: ImGuiMgr.h
include/imgui/: imgui.h  imgui_internal.h
include/imgui/backends/: imgui_impl_glfw.h
src/: ImGuiMgr.cpp  main.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
